@@ -3905,4 +3905,6 @@
 	  (from Max Holtzberg).
 	* configs/stm32f4discovery/posix_spawn:  Added a configuration
 	  that can be used for testing posix_spawn().
+	* arch/arm/src/stm32: Bring F1 support for general DMA and serial
+	  DMA in paricular up to parity with F2/F4 (from Mike Smith).
 
